<resources>
    <string name="app_name">ChipperMovie</string>
    <string name="image_movie">ImageMovie</string>
    <string name="name_movie">Name Movie</string>
    <string name="title_movie">title_movie</string>
    <string name="backdropimage">backDropImage</string>
    <string name="poster_image">poster_image</string>
    <string name="release_date">Release date</string>
    <string name="language">Language</string>
    <string name="runtime">Runtime</string>
    <string name="movie_language">Movie language</string>
    <string name="release_movie">Release movie</string>
    <string name="overview">Overview</string>
    <string name="overview_movie">Overview movie</string>
    <string name="productor_company_image">productor company image</string>
    <string name="name_producer_company">Name productor company</string>
    <string name="production_companies">Production companies</string>
    <string name="filter">Filter</string>
    <string name="title">Title</string>
    <string name="the_marvel_universe">The marvel universe</string>
    <string name="_2012_oscars_for_best_picture">2012 Oscars for best picture</string>
    <string name="dc_comics_universe">DC Comics universe</string>
    <string name="_2011_oscars_for_best_picture">2011 Oscars for best picture</string>
    <string name="the_avengers">The avengers</string>
    <string name="films_d_j_vus">Films déjà vus</string>
    <string name="text_no_connectivity">No Connection</string>
    <string name="text_connectivity">Back Online</string>
    <string name="server_error_dialog_title">Server Error</string>
    <string name="server_error_dialog_message">Communication with the server failed</string>
    <string name="server_error_dialog_button_caption">OK</string>
</resources>